initial code changes to the forked portfolio

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "developers-portfolio",
   "description": "A personal static website/portfolio template hosted with GitHub Pages, built to showcase my recent projects.",
-  "homepage": "http://hashirshoaeb.com/home",
+  "homepage": "http://localhost:3000/home",
   "version": "2.0.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,15 +25,11 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "PUBLIC_URL=http://localhost:3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "custom-deploy": "node pages.js"
-  },
-  "engines": {
-    "npm": "^8.11.0",
-    "node": "^18.13.0"
   },
   "eslintConfig": {
     "extends": [
